--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -42,7 +42,7 @@ header {
   background-color: $top-bg-medium;
   padding: 1rem 2rem;
   border-bottom: 3px solid $top-yellow;
-  text-align: center;
+  text-align: center; 
 
   h1 {
     margin: 0;
@@ -58,6 +58,8 @@ header {
 
   nav {
     margin-top: 0.5rem;
+    float: right;
+    text-align: right;
     a {
       color: $top-text-primary;
       margin: 0 0.75rem;
@@ -65,6 +67,7 @@ header {
       font-weight: bold;
       font-size: 0.9rem;
       text-transform: uppercase;
+      letter-spacing: 0.5px;
       &:hover {
         color: $top-yellow;
       }
@@ -99,6 +102,7 @@ h1, h2, h3, h4, h5, h6 {
   color: $top-text-primary;
   margin-top: 1.5em;
   margin-bottom: 0.5em;
+  line-height: 1.3;
 }
 
 .btn {
