--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
   </main>
   
   <footer>
-    <p>&copy; {{ site.time | date: '%Y' }} {{ site.title }} - A Jekyll Wiki Template</p>
+    <p>&copy; {{ site.time | date: '%Y' }} {{ site.title }}</p>
   </footer>
 </body>
 </html>
