--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -167,6 +167,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .home-container .featured-section {
   margin-bottom: 2.5rem;
+  text-align: center;
   h2 {
     font-size: 1.8em;
     position: relative;
@@ -200,6 +201,7 @@ h1, h2, h3, h4, h5, h6 {
   transition: transform 0.2s ease-in-out, box-shadow 0.3s ease-in-out, border-color 0.3s ease;
   display: flex;
   flex-direction: column;
+  text-align: left;
   height: 100%; 
 
   &:hover {
@@ -231,6 +233,7 @@ h1, h2, h3, h4, h5, h6 {
   display: grid;
   grid-template-columns: 1fr;
   gap: 2rem;
+  margin-top: 2.5rem;
   margin-bottom: 2.5rem;
 
   @media (min-width: 768px) {
