--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,8 +1,8 @@
 ---
 ---
 
-@import 'minima';
-@import 'components/lyrics'; 
+@import "minima";
+@import "components/lyrics"; 
 
 // TØP Theme Variables
 $top-bg-dark: #181818;
