--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,8 +14,8 @@ $top-yellow: #FCE300; // Trench Yellow
 $top-red: #E63946;    // Clancy Red / Rebellion Red
 $top-link-hover: #ffffff;
 
-$font-body: 'Lato', 'Helvetica Neue', Arial, sans-serif; // Changed to Lato
-$font-heading: 'Oswald', 'Impact', 'Arial Black', sans-serif; // Changed to Oswald
+$font-body: 'Lato', 'Helvetica Neue', Arial, sans-serif;
+$font-heading: 'Oswald', 'Impact', 'Arial Black', sans-serif;
 
 :root {
   --top-bg-dark: #{$top-bg-dark};
