--- a/_layouts/lyric.html
+++ b/_layouts/lyric.html
@@ -16,6 +16,12 @@ layout: default
         {% endif %}
       </div>
 
+      {% if page.youtube_id %}
+        <div class="youtube-player-container">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/{{ page.youtube_id }}" title="YouTube video player for {{ page.title }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+      {% endif %}
+
       <div class="lyric-text">
         {{ content | newline_to_br }} {# Preserves line breaks from Markdown #}
       </div>
